@@ -3,6 +3,7 @@ Changes from jTDS 0.8.1
 
 07/20/2004 - Brian Heineman
  o Added test for bug [974284] retval on callable statement isn't handled correctly
+ o Added test for bug [994888] Callable statement and Float output parameter
 
 07/19/2004 - Brian Heineman
  o Applied patch in bug [992971] Decimal testcase fails with sql7 (Thanks to
